Fixed CSS spacing in contact editing form - CMS Instrument status fieldset

--- a/cms_manage/css/style.css
+++ b/cms_manage/css/style.css
@@ -89,3 +89,7 @@ span.unpublished-icon {
 #contacts-listing_wrapper {
   margin-top: 10px;
 }
+
+#instrument-fieldset-wrapper .panel-body { padding: 25px; }
+#instrument-fieldset-wrapper .row { margin-top: 25px; border-bottom: 1px dashed #c0c0c0; }
+#instrument-fieldset-wrapper .row:last-child { border: 0; }
